--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </a>
             </li>
             <li>
-                <a href="https://twitter.com/Imroz80954935">
+                <a href="https://twitter.com/Imroz80954935" target="_blank">
                     <img src="https://cdn.iconscout.com/icon/free/png-64/twitter-2038532-1718517.png">
                 </a>
             </li>
